# pico-project-generator

./: .gitignore  LICENSE.txt  README.md  launch_with_pydiscovery.cmd  lwipopts.h  pico_configs.tsv  pico_project.py  pico_project_generation.py  pico_project_gui.py  pico_project_settings.py  requirements.txt  setup.py
.github/workflows/: tests.yaml
ProjectName/: CMakeLists.txt  ProjectName.cpp
pico_project/: __main__.py  cli.py  constants.json  gui.py  pico_project.py  picogenlib.py
pico_project/templates/: cmake.txt  main.txt
pico_project/templates/vscode/: c_properties.txt  extensions.txt  launch.txt
templates/: .gitignore  LICENCE.txt.j2  README.md.j2  cmake.txt  fragments.txt  main.txt
templates/vscode/: settings.txt
tests/: test_cli.py  test_pico_project.py
